Also added sitemap in last commit. This commit, fixed footer overflow issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -1863,7 +1863,7 @@ footer {
 }
 
 .site-links {
-    width: 500px;
+    max-width: max-content;
     display: flex;
     justify-content: space-between;
 }
